Project link and alignment fix
Fixed the alignment and the project navigation which was not working

--- a/styles/main.css
+++ b/styles/main.css
@@ -205,7 +205,7 @@ li{
 
 .theme-switch-wrapper {
     position: absolute;
-    right: 0;
+    right: -3em;
     top: 2em;  
     display: flex;
     align-items: center;
